syntax = "proto3";

package user;
option go_package = "../user";

service UserService{
  // 获取单个用户信息
  rpc GetUserByName(UserGetReq) returns (UserGetResp);
  // 获取所有用户信息，分页查找
  rpc UserList(ListGetReq) returns(ListGetResp);
  // 添加用户信息
  rpc AddUser(UserAddReq) returns(UserAddResp);
  // 更新用户名字
  rpc UpdUserName(UserUpdReq) returns(UserUpdResp);
  // 删除用户
  rpc DelUser(UserDelReq) returns(UserDelResp);
}

message User{
  int64 id = 1;
  string created_at = 2;
  string updated_at = 3;
  string name = 4;
}
// 查询一条
message UserGetReq{
  string name = 1;
}

// 返回查询一条的结果
message UserGetResp{
  User user = 1;
  int32 code = 2;
  string msg = 3;
}
// 更新名字
message UserUpdReq{
  string old_name = 1;
  string new_name = 2;
}

// 返回更新名字的结果
message UserUpdResp{
  User user = 1;
  int32 code = 2;
  string msg = 3;
}

// 查询所有
message ListGetReq{
  int32 page = 1;
  int32 limit = 2;
}

// 返回查询所有的结果
message ListGetResp{
  repeated User user = 1;
  int32 code = 2;
  string msg = 3;
}

// 添加用户
message UserAddReq{
  string name = 1;
}

// 返回添加用户的结果
message UserAddResp{
  User user = 1;
  int32 code = 2;
  string msg = 3;
}

// 删除用户
message UserDelReq{
  string name = 1;
}

// 返回删除的结果
message UserDelResp{
  User user = 1;
  int32 code = 2;
  string msg = 3;
}


